[package]
name = "str_assert"
version = "0.1.0"
authors = ["Dustin Knopoff <rust@knopoff.dev>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/dustinknopoff/str_assert"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dissimilar = "^1.0"
