[package]
name = "str_assert"
version = "0.2.0"
authors = ["Dustin Knopoff <rust@knopoff.dev>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/dustinknopoff/str_assert"
description = "Thin wrapper around stdlib assert_eq macros using dissimilar as the comparison. (Only for strings)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dissimilar = "^1.0"
